# hermes-recall-memory

./: .gitignore  CHANGELOG.md  LICENSE  README.md  UPDATING.md  __init__.py  plugin.yaml  pyproject.toml  recall_cli.py  schema.py  store.py
.github/workflows/: ci.yml
dashboard/: manifest.json  plugin_api.py
docs/: ARCHITECTURE.md  BURNIN.md  COMPATIBILITY.md  CONFIGURATION.md  INSTALL.md  TOOLS.md
scripts/: install.sh  recall_dogfood.sh  recall_stress_probe.py
tests/: test_recall_roadmap.py
tests/plugins/memory/: conftest.py  test_recall_provider.py  test_recall_redaction.py  test_recall_retrieval_quality.py  test_recall_store.py
