[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-recall-memory"
version = "0.3.8"
description = "Conservative Hermes Agent memory archive provider with SQLite FTS5, redaction, audit, and curation tools."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Hermes Recall Memory contributors"}]
keywords = ["hermes-agent", "memory", "sqlite", "fts5", "audit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/HenkDz/hermes-recall-memory"
Repository = "https://github.com/HenkDz/hermes-recall-memory"
Issues = "https://github.com/HenkDz/hermes-recall-memory/issues"

[project.scripts]
recall-cli = "recall_cli:main"

[tool.setuptools]
py-modules = ["recall_cli", "store", "schema", "audit", "redaction"]

[tool.pytest.ini_options]
testpaths = ["tests/test_recall_roadmap.py"]
pythonpath = ["."]
